--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="index.html" class="navbar-logo">MyApp</a>
         <ul class="navbar-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="news.html">Berita</a></li>
-          <li><a href="about.html">Tentang</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </div>
     </nav>
