--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MyApp | Tentang</title>
+    <title>MyApp | About</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -13,8 +13,8 @@
         <a href="index.html" class="navbar-logo">MyApp</a>
         <ul class="navbar-menu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="news.html">Berita</a></li>
-          <li><a href="about.html">Tentang</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </div>
     </nav>
